# apps/users_app/src/main/java/com/williamsdreams/vl_learning/users_app/controllers/UsersCreatePostV1Controller.java
@@ -17,23 +17,23 @@ public class UsersCreatePostV1Controller implements UsersCreatePostV1Api {
     private final UserCreator userCreator;
 
     @Override
-    public ResponseEntity<UserDto> postUsersCreate(NewUserDto newUserDto) {
+    public ResponseEntity<UserDto> postUsersCreate(String xUserId, NewUserDto newUserDto) {
         User user = userCreator.create(
-                NewUser.builder()
-                        .externalId(newUserDto.getExternalId())
-                        .email(newUserDto.getEmail())
-                        .name(newUserDto.getName())
-                        .password(newUserDto.getPassword())
-                        .build()
+            NewUser.builder()
+                .externalId(xUserId)
+                .email(newUserDto.getEmail())
+                .name(newUserDto.getName())
+                .password(newUserDto.getPassword())
+                .build()
         );
         return ResponseEntity.ok(
-                new UserDto(
-                        user.getEmail(),
-                        user.getPassword(),
-                        user.getExternalId(),
-                        user.getName(),
-                        user.getId()
-                )
+            new UserDto(
+                user.getEmail(),
+                user.getPassword(),
+                user.getName(),
+                user.getId(),
+                user.getExternalId()
+            )
         );
     }
 }
